hphp/test/slow/hhbbc/func_family_018.php.expectf
Fatal error: Class D contains abstract method (foo) and must therefore be declared abstract or implement the remaining methods in %s/func_family_018.php on line 8
